<resources>
    <string name="app_name">Travel Journal</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_main">My Travels</string>
    <string name="add_entry">Add Entry</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="take_photo">Take Photo</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="sync_data">Sync with server</string>
    <string name="error_connection">Connection error</string>
    <string name="success_sync">Data synchronized successfully</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_sync">Sync data</string>
    <string name="no_entries">No travel entries found. Add your first one!</string>
    <string name="location_not_available">Location not available</string>
    <string name="get_location">Get Location</string>
    <string name="error_title_required">Title is required</string>
    <string name="entry_saved">Entry saved successfully</string>
    <string name="error_saving_entry">Error saving entry</string>
    <string name="gps_disabled_message">Your GPS is disabled, please do enable it</string>
    <string name="enable_gps">Yes</string>
    <string name="quit">No - Quit</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
</resources>